Firefox spacing fixes for nickname, status and pokemon inputs. Little root town now has starter pokemon as filter

--- a/src/components/Nickname/Nickname.module.scss
+++ b/src/components/Nickname/Nickname.module.scss
@@ -13,4 +13,7 @@
   align-items: center;
   gap: 1px;
   font-weight: bold;
+  .innerLabel {
+    min-width: 72px;
+  }
 }
