--- a/src/components/Pokemon/Pokemon.module.scss
+++ b/src/components/Pokemon/Pokemon.module.scss
@@ -28,13 +28,12 @@
 .label {
   display: flex;
   align-items: center;
-  gap: 5px;
   font-weight: bold;
 
   .innerLabel {
     display: flex;
     flex-flow: column nowrap;
-    width: fit-content;
+    min-width: 72px;
 
     > span {
       color: red;
